--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,7 @@
     <!-- Content -->
 </section>
 
+
 <!-- Eventos Recientes-->
 <section class="page-section bg-light" id="eventosRecientes">
     <div class="container">
@@ -80,7 +81,8 @@
         <!-- Botón para cargar más eventos -->
         <div class="row">
             <div class="col-lg-12 text-center">
-                <button id="loadMoreBtn" class="btn btn-primary btn-xl text-uppercase">Cargar más</button>
+                <a id="load-more-btn-events" class="btn btn-primary btn-xl text-uppercase">Cargar más eventos</a>
+                <input type="hidden" name="_csrf" value="{{token}}"/>
             </div>
         </div>
     </div>
@@ -124,7 +126,7 @@
                     <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-            <div class="text-center" class="col-lg-4">
+            <div class="text-center col-lg-4">
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="/img/team/2.jpg" alt="..." />
                     <h4>Alba Velasco</h4>
@@ -141,16 +143,52 @@
     </div>
 </section>
 
-
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- Core theme JS-->
-<script src="/js/cargar.js"></script>
 <script src="/js/scripts.js"></script>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <!-- * *                               SB Forms JS                               * *-->
 <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const pageSize = 10;
+        let page = 1; // Variable declarada aquí
+        const loadMoreBtn = document.getElementById("load-more-btn-events");
+
+        loadMoreBtn.addEventListener('click', () => {
+            fetch(`https://localhost:8443/load-more-events?page=${page}&size=${pageSize}`)
+                .then(response => response.json()) // Parsea la respuesta como JSON
+                .then(events => {
+                    const eventsRow = document.getElementById('eventsRow');
+
+                    // Itera sobre cada evento y genera el HTML correspondiente
+                    events.forEach(event => {
+                        const eventHTML = `
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="portfolio-item">
+                                    <div class="portfolio-caption">
+                                        <div class="portfolio-caption-heading">${event.title}</div>
+                                        <div class="portfolio-caption-subheading text-muted">${event.description}</div>
+                                        <a class="btn btn-primary btn-xl text-uppercase" href="event/${event.id}">Más información</a>
+                                    </div>
+                                </div>
+                            </div>`;
+                        // Agrega el HTML generado al contenedor de eventos
+                        eventsRow.innerHTML += eventHTML;
+                    });
+
+                    page++;
+                })
+                .catch(error => {
+                    console.error('Error fetching events:', error);
+                });
+        });
+    });
+</script>
 </body>
 </html>
