--- a/src/main/resources/templates/editEvent.html
+++ b/src/main/resources/templates/editEvent.html
@@ -7,20 +7,24 @@
 </head>
 <body>
 
-<form action="/editEvent/{id}" method="post">
+<form action="/editEvent" method="post">
   <label for="floatingTitle">Evento:</label>
-  <input type="text" id="floatingTitle" name="title" value={{event.title}} required>
+  <input type="text" id="floatingTitle" name="title" value="{{event.title}}" required>
 
   <label for="floatingDate">Fecha</label>
-  <input type="text" class="form-control" id="floatingDate" name="fecha" value={{event.fecha}} required>
+  <input type="text" class="form-control" id="floatingDate" name="fecha" value="{{event.fecha}}" required>
 
   <label for="floatingDuration">Duracion</label>
-  <input type="text" class="form-control" id="floatingDuration" name="duration" value={{event.duration}} required>
+  <input type="text" class="form-control" id="floatingDuration" name="duration" value="{{event.duration}}" required>
 
   <label for="floatingPlace">Lugar</label>
-  <input type="text" class="form-control" id="floatingPlace" name="place" value={{event.place}} required>
+  <input type="text" class="form-control" id="floatingPlace" name="place" value="{{event.place}}" required>
+
+  <label for="floatingDescription">Lugar</label>
+  <input type="text" class="form-control" id="floatingDescription" name="description" value="{{event.description}}" required>
 
   <input type="hidden" name="_csrf" value="{{token}}"/>
+  <input type="hidden" name="id" value="{{event.id}}" />
   <button type="submit">Guardar cambios</button>
 </form>
 </body>
