--- a/src/main/resources/templates/createReview.html
+++ b/src/main/resources/templates/createReview.html
@@ -25,7 +25,7 @@
                                 </div>
 
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="floatingPhone" placeholder="Numero de contacto" name="description">
+                                    <textarea class="form-control" id="floatingPhone" placeholder="Deja tu comentario" name="description"></textarea>
                                     <label for="floatingPhone">Deja tu comentario</label>
                                 </div>
 
