--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -33,7 +33,7 @@
   <div class="sidenav-header">
     <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="/" target="_blank">
-      <span class="ms-1 font-weight-bold text-white">Volver a TicketEvent</span>
+      <span class="ms-1 font-weight-bold text-white" >Volver a TicketEvent</span>
     </a>
   </div>
   <hr class="horizontal light mt-0 mb-2">
@@ -82,7 +82,6 @@
     </ul>
   </div>
 </aside>
-
 
 <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
   <!-- Navbar -->
@@ -169,7 +168,7 @@
   <div class="container-fluid py-4">
     <div class="row">
       <div class="col-12">
-        <a class="btn btn-primary btn-xl w-100" href="/CreateReview">Añadir una review</a>
+        <a class="btn btn-primary btn-xl w-100" href="/CreateReview">Subir un nuevo review</a>
       </div>
     </div>
   </div>
