--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -158,7 +158,7 @@
             </div>
           </div>
 
-        </div>
+        <!--</div>
         <div class="row mt-7">
           <div class="col-lg-6 col-md-8 mt-4 mb-6">
             <div class="card z-index-2 ">
@@ -230,6 +230,7 @@
                             <img src="assets/img/small-logos/logo-xd.svg" class="avatar avatar-sm me-3" alt="xd">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
+                          -->
                            <!-- añadir enlace a la pagina de gestion del evento -->
                             <h6 class="mb-0 text-sm">Taller en Material XD Version</h6>
                           </div>
