--- a/src/main/resources/templates/showEvent.html
+++ b/src/main/resources/templates/showEvent.html
@@ -46,6 +46,11 @@
         <i class="fas fa-edit me-1"></i>
         Inscribirme
     </a>
+    <a class="btn btn-warning btn-xl text-uppercase list-inline" href="/CreateReview">
+        <input type="hidden" name="_csrf" value="{{token}}"/>
+        <i class="fas fa-edit me-1"></i>
+        Agregar comentario
+    </a>
     {{/user}}
 
 
