--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -139,7 +139,7 @@
               <tbody>
 
 
-            {{#allComments}}
+            {{#userComments}}
               <tr>
                 <td>
                   <div class="d-flex flex-column justify-content-center">
@@ -150,7 +150,7 @@
                   <h6 class="d-flex flex-column justify-content-center">{{description}}</h6>
                 </td>
               </tr>
-            {{/allComments}}
+            {{/userComments}}
 
 
               </tbody>
