--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -148,6 +148,29 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-12 col-xl-12">
+          <div class="card card-plain h-100">
+            <div class="card-header pb-0 p-3">
+              <div class="row">
+                <div class="col-md-8 d-flex align-items-center">
+                  <h6 class="mb-0">Eventos en los que estás apuntado</h6>
+                </div>
+              </div>
+            </div>
+            <div class="card-body p-3">
+              <ul class="list-group">
+                {{#events}}
+                <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Título:</strong> &nbsp; {{title}}</li>
+                {{/events}}
+                {{^events}}
+                <li class="list-group-item border-0 ps-0 pt-0 text-sm">No estás inscrito a ningún evento.</li>
+                {{/events}}
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
